# crew_ai

./: README.md
agentic_workflow/: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agentic_workflow/api/: LICENSE  README.md  requirements.txt
agentic_workflow/api/app/: .env  main.py
agentic_workflow/api/app/api/v1/: innovation_prediction.py
agentic_workflow/api/app/routes/: router.py
agentic_workflow/api/app/schemas/: pojo.py
agentic_workflow/src/agentic_workflow/: agents.py  crew.py  tasks.py
